# lottron

./: README.md
crates/dto/: Cargo.toml
crates/dto/src/: historgram.rs  lib.rs  lotto_entry.rs
crates/lottron/: Cargo.toml
crates/lottron/src/: main.rs
crates/scraper/: Cargo.toml
crates/scraper/src/: main.rs
crates/scrapper/: Cargo.toml
data/: lotto_2010.txt  lotto_2012.txt  lotto_2013.txt  lotto_2016.txt  lotto_2018.txt  lotto_2020.txt  lotto_2021.txt
data/lotto/: lotto_2011.txt  lotto_2014.txt  lotto_2015.txt  lotto_2017.txt  lotto_2019.txt
data/plots/: last_occurrence.json  most_common.json
scripts/: histogram.py
