[package]
name = "lotto_dto"
version = "0.1.0"
authors = ["Pawel Rynowiecki <pawel.rynowiecki@anixe.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
itertools = "0.10.0"