[package]
name = "lottron"
version = "0.1.0"
authors = ["Pawel Rynowiecki <pawel.rynowiecki@anixe.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lotto_dto = {path = "../dto"}

walkdir = "2.3.2"
itertools = "0.10.0"